src/test/resources/frontendReference/invalid/semanticErr/multiple/multiCaseSensitivity.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:10 -- Variable NUMBER is not defined in this scope
